Demona/Source/Glk.cs


        [DllImport(GLKDLL)]
        public static extern int glk_get_char_stream(strid_t str);
        [DllImport(GLKDLL)]
        private static extern uint glk_get_line_stream(strid_t str, IntPtr buf, uint len);
        public static uint glk_get_line_stream(strid_t str, StringBuilder sb)
        {
            int len = sb.Capacity;
            IntPtr buf = Marshal.AllocHGlobal(len);
            try
            {
                uint result = glk_get_line_stream(str, buf, (uint)len);
                StrFromLatin1(buf, sb);
                return result;
            }
            finally
            {
                Marshal.FreeHGlobal(buf);
            }
        }
        [DllImport(GLKDLL)]
        public static extern uint glk_get_buffer_stream(strid_t str, [Out] byte[] buf, uint len);

        [DllImport(GLKDLL)]
        public static extern void glk_stylehint_set(WinType wintype, Style styl, StyleHint hint,
            int val);
        [DllImport(GLKDLL)]
        public static extern void glk_stylehint_clear(WinType wintype, Style styl, StyleHint hint);
        [DllImport(GLKDLL)]
        public static extern bool glk_style_distinguish(winid_t win, Style styl1, Style styl2);
        [DllImport(GLKDLL)]
        public static extern bool glk_style_measure(winid_t win, Style styl, StyleHint hint,
            out int result);

        [DllImport(GLKDLL)]
        public static extern frefid_t glk_fileref_create_temp(FileUsage usage, uint rock);
        [DllImport(GLKDLL)]
        private static extern frefid_t glk_fileref_create_by_name(FileUsage usage, IntPtr name, uint rock);
        public static frefid_t glk_fileref_create_by_name(FileUsage usage, string name, uint rock)
        {
            IntPtr buf = StrToLatin1(name);
            try { return glk_fileref_create_by_name(usage, buf, rock); }
            finally { Marshal.FreeHGlobal(buf); }
        }
        [DllImport(GLKDLL)]
        public static extern frefid_t glk_fileref_create_by_prompt(FileUsage usage, FileMode fmode,
            uint rock);
        [DllImport(GLKDLL)]
        public static extern frefid_t glk_fileref_create_from_fileref(FileUsage usage, frefid_t fref,
            uint rock);
        [DllImport(GLKDLL)]
        public static extern void glk_fileref_destroy(frefid_t fref);
        [DllImport(GLKDLL)]
        public static extern frefid_t glk_fileref_iterate(frefid_t fref, out uint rockptr);
        [DllImport(GLKDLL)]
        public static extern uint glk_fileref_get_rock(frefid_t fref);
        [DllImport(GLKDLL)]
        public static extern void glk_fileref_delete_file(frefid_t fref);
        [DllImport(GLKDLL)]
        public static extern bool glk_fileref_does_file_exist(frefid_t fref);

        [DllImport(GLKDLL)]
        public static extern void glk_select(out event_t @event);
        [DllImport(GLKDLL)]
        public static extern void glk_select_poll(out event_t @event);

        [DllImport(GLKDLL)]
        public static extern void glk_request_timer_events(uint millisecs);

        [DllImport(GLKDLL)]
        public static extern void glk_request_line_event(winid_t win, IntPtr buf, uint maxlen,
            uint initlen);
        [DllImport(GLKDLL)]
        public static extern void glk_request_char_event(winid_t win);
        [DllImport(GLKDLL)]
        public static extern void glk_request_mouse_event(winid_t win);

        [DllImport(GLKDLL)]
        public static extern void glk_cancel_line_event(winid_t win, out event_t @event);
        [DllImport(GLKDLL)]
        public static extern void glk_cancel_char_event(winid_t win);
        [DllImport(GLKDLL)]
        public static extern void glk_cancel_mouse_event(winid_t win);

        [DllImport(GLKDLL)]
        public static extern schanid_t glk_schannel_create(uint rock);
        [DllImport(GLKDLL)]
        public static extern void glk_schannel_destroy(schanid_t chan);
        [DllImport(GLKDLL)]
        public static extern schanid_t glk_schannel_iterate(schanid_t chan, out uint rockptr);
        [DllImport(GLKDLL)]
        public static extern uint glk_schannel_get_rock(schanid_t chan);

        [DllImport(GLKDLL)]
        public static extern uint glk_schannel_play(schanid_t chan, uint snd);
        [DllImport(GLKDLL)]
        public static extern uint glk_schannel_play_ext(schanid_t chan, uint snd, uint repeats,
            bool notify);
        [DllImport(GLKDLL)]
        public static extern void glk_schannel_stop(schanid_t chan);
        [DllImport(GLKDLL)]
        public static extern void glk_schannel_set_volume(schanid_t chan, uint vol);

        [DllImport(GLKDLL)]
        public static extern void glk_sound_load_hint(uint snd, bool flag);

        [DllImport(GLKDLL)]
        public static extern BlorbError giblorb_set_resource_map(strid_t file);

        #endregion

        public static IntPtr StrToLatin1(string s)
        {
            byte[] bytes = Encoding.GetEncoding(LATIN1).GetBytes(s);
            IntPtr result = Marshal.AllocHGlobal(bytes.Length + 1);
            if (result == IntPtr.Zero)
                throw new Exception("Can't allocate unmanaged memory in StrToLatin1");

            Marshal.Copy(bytes, 0, result, bytes.Length);
            Marshal.WriteByte(result, bytes.Length, 0);
            return result;
        }

        public static void StrFromLatin1(IntPtr buf, StringBuilder sb)
        {
            int len = 0;
            while (Marshal.ReadByte(buf, len) != 0)
                len++;

            byte[] bytes = new byte[len];
            Marshal.Copy(buf, bytes, 0, len);
            string str = Encoding.GetEncoding(LATIN1).GetString(bytes);

            sb.Length = 0;
            sb.Append(str);
        }
    }
}
